src/app.css
body::-webkit-scrollbar {
    width: 0.4em;
}

body::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(250, 244, 244, 0.3);
}

body::-webkit-scrollbar-thumb {
    background-color: darkgrey;
}

.p-inputtext {
    border: none;
    height: 38px;
    font-size: 15px;
    padding: 3px 0 3px 25px;
    width: 85%;
    border-radius: 8px;
}

.card {
    border-radius: 8px;
}

.p-inputtext:focus {
    border: none !important;
    outline: none !important;
}

.p-inputtext::placeholder {
    font-size: 15px;
    color: lightgray;
}

.p-icon {
    position: absolute;
    right: 0;
    margin: 13px 15px 0 0;

}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
    transition: background-color 5000s ease-in-out 0s;
}

